--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -41,6 +41,8 @@ button:hover {
   /* La souris doit devenir une main */
 }
 
+/******************* ICONES  *******************/
+
 .material-symbols-outlined {
 font-variation-settings:
 'FILL' 0,
@@ -95,9 +97,9 @@ font-variation-settings:
   gap: 40px;
 }
 
-/******************* HEADER *******************/
+/******************* Partie d'intro en beige sur les pages : accueil et catalogue *******************/
 
-header {
+#hero {
   min-height: 420px;
   background-color: #F2E9E4;
   display: flex;
