--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,7 +99,7 @@ font-variation-settings:
 
 /******************* Partie d'intro en beige sur les pages : accueil et catalogue *******************/
 
-#hero {
+#catalog-hero {
   min-height: 420px;
   background-color: #F2E9E4;
   display: flex;
