--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-main{
+main {
   width: 1240px;
   margin: 0 auto;
 }
@@ -21,6 +21,10 @@ a,
 a:visited {
   color: black;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 input {
@@ -102,6 +106,17 @@ font-variation-settings:
   gap: 40px;
 }
 
+
+/******************* FOOTER *******************/
+footer {
+  height: 408px;
+  color: white;
+  background-color: #22223B;
+}
+
+
+
+
 /******************* Partie d'intro en beige sur les pages : accueil et catalogue *******************/
 
 #catalog-hero {
@@ -137,7 +152,74 @@ width: 480px;
 }
 
 #search .btn {
-padding: 10px 12px;
+  padding: 10px 12px;
+}
+
+/******************* MAIN CATALOG  *******************/
+
+#catalog-container {
+  padding: 160px 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 76px;
+}
+
+#catalog-container h2 {
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+
+#catalog-container ul {
+  padding: 16px;
+  width: 240px;
+  font-size: 20px;
+  background-color: #F2E9E4;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+#catalog h2 {
+  text-transform: uppercase;
+}
+
+#list-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px 24px;
+}
+
+.book-card {
+  width: 292px;
+}
+
+.book-card img {
+  width: 292px;
+  height: 400px;
+  background-color: #CCCCCC;
+}
+
+.book-infos {
+  margin-top: 24px;
+}
+
+.book-infos h3 {
+  margin-bottom: 16px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.book-infos p {
+  font-size: 20px;
+}
+
+.book-infos p.author {
+  margin-bottom: 8px;
+  color: #999999;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 /******************* HEADER BOOK DETAILS *******************/
