--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,8 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-main {
+main,
+#footer-container {
   width: 1240px;
   margin: 0 auto;
 }
@@ -114,8 +115,52 @@ footer {
   background-color: #22223B;
 }
 
+#footer-container {
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+footer h2 {
+  font-size: 40px;
+  margin-bottom: 32px;
+}
 
+footer nav {
+  margin: 32px 0;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  gap: 40px;
+}
+
+footer li {
+  text-transform: uppercase;
+}
+
+footer a,
+footer a:visited {
+  color: white;
+}
+
+footer hr {
+  margin-bottom: 32px;
+  border: 0;
+  border-top: 1px solid #999999;
+}
+
+#footer-end {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+#footer-end p {
+  color: #999999;
+}
 
 /******************* Partie d'intro en beige sur les pages : accueil et catalogue *******************/
 
@@ -123,7 +168,6 @@ footer {
   min-height: 420px;
   background-color: #F2E9E4;
   display: flex;
-  
 }
 
 /******************* HEADER CATALOG *******************/
