--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,7 +66,6 @@ font-variation-settings:
   color: white;
 }
 
-
 /******************* NAV  *******************/
 #nav-bar {
   margin: 0 auto;
@@ -274,22 +273,31 @@ width: 480px;
 #breadcrumb {
   margin: 0 auto;
   padding-bottom: 44px;
+  padding-top: 54px;
   display: flex;
   align-items: center;
 }
 
-.title{
+#breadcrumb a{
+  color: #666666;
+}
+
+#breadcrumb div{
+  padding-right: 4px;
+}
+
+#title{
   margin: 0 auto;
   display: flex;
   align-items: center;
-  padding-bottom: 84px;
 }
-.title .material-symbols-outlined span{
+
+#title span .material-symbols-outlined {
   width: 61.96px;
   height: 60px;
 }
 
-.title h1 {
+#title h1 {
   font-weight: 400;
   font-size: 50px;
   padding-right: 80px;
@@ -299,41 +307,37 @@ width: 480px;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 80px 0;
 }
 
-#book-details .cover {
+#book-details #cover {
   width: 550px;
   height: 660px;
 }
 
-#book-details .infos {
+#book-details #infos {
   padding-left: 74px;
   width: 615px;
 }
 
-.title-author .book-title {
+#title-author #book-title {
   font-size: 35px;
   padding-bottom: 16px;
 }
 
-.title-author .author {
+#title-author .author {
   font-size: 25px;
   padding-bottom: 5px;
 }
 
-#book-details .review {
+#book-details #review {
   padding-top: 16px;
 }
 
-#book-details .review p{
+#book-details #review p{
   font-size: 16px;
   font-weight: 600;
   padding-bottom: 8px;
-}
-
-#book-details .star {
-  width: 20px;
-  height: 19px;
 }
 
 #book-details #summary {
@@ -370,7 +374,7 @@ width: 480px;
 
 #evaluation p{
   font-weight: 600;
-  font-size: 22px;
+  font-size: 18px;
   padding-right: 40px;
 }
 
@@ -380,5 +384,11 @@ width: 480px;
 
 .star{
   padding-right: 8px;
+}
+
+.etoile{
+  color: #FFAD66;
+  font-variation-settings:
+  'FILL' 0
 }
 
