--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -163,23 +163,36 @@ footer hr {
   color: #999999;
 }
 
-/******************* Partie d'intro en beige sur les pages : accueil et catalogue *******************/
-
+/******************* CATALOG HEADER *******************/
 #catalog-hero {
   min-height: 420px;
+  padding-bottom: 120px;
   background-color: #F2E9E4;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-/******************* HEADER CATALOG *******************/
-#catalog-hero {
+#catalog-nav,
+#catalog-hero-main {
+  margin: 0 auto;
+  width: 1240px;
+}
+
+#catalog-hero-main {
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 80px;
 }
 
-#catalog-hero h1 {
-  margin-top: 100px;
+#catalog-nav {
+  margin-bottom: 16px;
+  text-transform: uppercase;
+}
+
+a.grey {
+  color: #666666;
 }
 
 #search {
@@ -200,10 +213,10 @@ width: 480px;
   padding: 10px 12px;
 }
 
-/******************* MAIN CATALOG  *******************/
+/******************* CATALOG MAIN  *******************/
 
 #catalog-container {
-  padding: 160px 0;
+  padding-top: 160px;
   display: flex;
   justify-content: space-between;
   gap: 76px;
