--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,7 +54,7 @@ textarea::placeholder
 }
 
 button:hover {
-  /* La souris doit devenir une main */
+  cursor: pointer;
 }
 
 /******************* ICONES  *******************/
