--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -417,7 +417,7 @@ width: 480px;
   align-items: center;
   justify-content: space-around;
   width: 1240px;
-  margin: 0 auto;
+  margin: 0px auto 65px;
 }
 
 #home-cover-img{
@@ -535,7 +535,7 @@ width: 480px;
   margin: 0;
   padding: 0;
   position: absolute;
-  bottom: 2%;
+  bottom: 0px;
   left: 0;
   right: 0;
   text-align: center;
@@ -544,18 +544,18 @@ width: 480px;
 
 .carousel-indicators li {
   display: inline-block;
-  margin: 0 5px;
+  margin-right: 10px;
 }
 
 .carousel-bullet {
-  color: #fff;
+  color: #cd8383;
   cursor: pointer;
   display: block;
-  font-size: 35px;
+  font-size: 55px;
 }
 
 .carousel-bullet:hover {
-  color: #cb9e9e;
+  color: #794e4e;
 }
 
 #carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
