--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -673,10 +673,12 @@ a.home-catalog-card{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100px;
-  height: 30px;
+  width: 110px;
+  height: 40px;
   background-color: white;
   border-radius: 10px;
+  padding: 30px;
+  text-decoration: none;
 }
 
 
