--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,16 +29,14 @@ a:hover {
   text-decoration: underline;
 }
 
-input, 
-#book-form select
-{
+input,
+#book-form select {
   padding: 8px 16px;
   height: 38px;
 }
 
 input::placeholder,
-textarea::placeholder
-{
+textarea::placeholder {
   font-size: 16px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -48,7 +46,7 @@ textarea::placeholder
   padding: 8px 24px;
   font-size: 16px;
   color: white;
-  background-color: #4A4E69;
+  background-color: #4a4e69;
   border: none;
   border-radius: 4px;
 }
@@ -60,11 +58,7 @@ button:hover {
 /******************* ICONES  *******************/
 
 .material-symbols-outlined {
-font-variation-settings:
-'FILL' 0,
-'wght' 300,
-'GRAD' 0,
-'opsz' 24
+  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
 }
 
 .white-icon {
@@ -112,12 +106,11 @@ font-variation-settings:
   gap: 40px;
 }
 
-
 /******************* FOOTER *******************/
 footer {
   height: 408px;
   color: white;
-  background-color: #22223B;
+  background-color: #22223b;
 }
 
 #footer-container {
@@ -172,7 +165,7 @@ footer hr {
 #catalog-hero {
   min-height: 420px;
   padding-bottom: 120px;
-  background-color: #F2E9E4;
+  background-color: #f2e9e4;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -208,7 +201,7 @@ a.grey {
 }
 
 #search input {
-width: 480px;
+  width: 480px;
 }
 
 #search span {
@@ -224,7 +217,7 @@ width: 480px;
 #catalog-container {
   padding-top: 160px;
   display: flex;
-  justify-content: space-between;
+
   gap: 76px;
 }
 
@@ -237,12 +230,16 @@ width: 480px;
   padding: 16px;
   width: 240px;
   font-size: 20px;
-  background-color: #F2E9E4;
+  background-color: #f2e9e4;
   list-style: none;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 16px;
+}
+
+#catalog-container .active-category {
+  font-weight: bold;
 }
 
 #catalog h2 {
@@ -264,7 +261,7 @@ width: 480px;
 .book-card img {
   width: 292px;
   height: 400px;
-  background-color: #CCCCCC;
+  background-color: #cccccc;
 }
 
 .book-infos {
@@ -297,20 +294,20 @@ width: 480px;
   align-items: center;
 }
 
-#breadcrumb a{
+#breadcrumb a {
   color: #666666;
   font-size: 16px;
   transition: font-size 0.3s ease;
-  &:hover{
+  &:hover {
     font-size: 20px;
-}
+  }
 }
 
-#breadcrumb div{
+#breadcrumb div {
   padding-right: 4px;
 }
 
-#title-detail{
+#title-detail {
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -322,22 +319,22 @@ width: 480px;
   padding-right: 80px;
 }
 
-#title-detail a .material-symbols-outlined{
-font-size: 70px;
-transition: font-size 0.3s ease;
-&:hover{
-  font-size: 80px;
-}
+#title-detail a .material-symbols-outlined {
+  font-size: 70px;
+  transition: font-size 0.3s ease;
+  &:hover {
+    font-size: 80px;
+  }
 }
 
 /******************* BOOK DETAILS *******************/
 
-#cover img{
-width: 550px;
-height: 660px;
+#cover img {
+  width: 550px;
+  height: 660px;
 }
 
-#book-details{
+#book-details {
   display: flex;
   flex-direction: row;
   padding: 80px 0;
@@ -367,7 +364,7 @@ height: 660px;
   padding-top: 16px;
 }
 
-#book-details #review p{
+#book-details #review p {
   font-size: 20px;
   font-weight: 600;
   padding-bottom: 8px;
@@ -381,73 +378,73 @@ height: 660px;
   padding-bottom: 61px;
 }
 
-#infos-1{
+#infos-1 {
   display: flex;
   flex-direction: row;
 }
 
-#infos-1 #catgories-details, #infos-2{
+#infos-1 #catgories-details,
+#infos-2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-right: 45px;
 }
 
-#infos-1 #catgories-details p, #infos-2 p{
+#infos-1 #catgories-details p,
+#infos-2 p {
   padding-bottom: 11px;
   font-size: 20px;
 }
 
-#catgories-details p{
+#catgories-details p {
   font-weight: 700;
 }
 
-#evaluation{
+#evaluation {
   display: flex;
   align-items: center;
 }
 
-#evaluation p{
+#evaluation p {
   font-weight: 600;
   font-size: 18px;
   padding-right: 40px;
 }
 
-#evaluation #stars-2{
+#evaluation #stars-2 {
   align-self: center;
 }
 
 /******************* STAR RATING *******************/
 
 .rating input {
-  display:none;
+  display: none;
 }
 
-.stars .material-symbols-outlined{
+.stars .material-symbols-outlined {
   padding-right: 8px;
-  color: #FFAD66;
-  font-variation-settings:
-  'FILL' 1
+  color: #ffad66;
+  font-variation-settings: "FILL" 1;
 }
 .rating .material-symbols-outlined {
   padding-right: 8px;
-  color: #FFAD66;
+  color: #ffad66;
   transition: color 0.3s ease;
   &:hover {
-    font-variation-settings:
-    'FILL' 1
+    font-variation-settings: "FILL" 1;
   }
 }
 
 /******************* HOME CAROUSEL *******************/
 
 #home-catalog-hero {
-  background-color: #F2E9E4;
+  background-color: #f2e9e4;
   padding: 50px;
   margin-bottom: 120px;
 }
 
-#home-container-header{
+#home-container-header {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -456,34 +453,34 @@ height: 660px;
   margin: 0px auto 65px;
 }
 
-#home-cover-img{
+#home-cover-img {
   height: 600px;
   width: 437px;
 }
 
-#home-left-part{
+#home-left-part {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   width: 480px;
 }
 
-#home-right-part{
+#home-right-part {
   width: 500px;
 }
 
-#home-left-part h1{
+#home-left-part h1 {
   font-size: 72px;
   margin: 30px 0;
 }
 
-#home-stars-review{
+#home-stars-review {
   margin: 30px 0;
 }
 
-#home-see-more{
+#home-see-more {
   position: relative;
-  background-color: #1A0C00;
+  background-color: #1a0c00;
   width: 100px;
   height: 40px;
   margin: 30px 0;
@@ -493,7 +490,7 @@ height: 660px;
   align-items: center;
 }
 
-#home-see-more a{
+#home-see-more a {
   color: white;
   cursor: pointer;
   text-decoration: none;
@@ -564,7 +561,7 @@ height: 660px;
 #carousel-1:checked ~ .control-1,
 #carousel-2:checked ~ .control-2,
 #carousel-3:checked ~ .control-3,
-#carousel-4:checked ~ .control-4, 
+#carousel-4:checked ~ .control-4,
 #carousel-5:checked ~ .control-5 {
   display: block;
 }
@@ -581,11 +578,31 @@ height: 660px;
   z-index: 10;
 }
 
-#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
-#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
-#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet,
-#carousel-4:checked ~ .control-4 ~ .carousel-indicators li:nth-child(4) .carousel-bullet,  
-#carousel-5:checked ~ .control-5 ~ .carousel-indicators li:nth-child(5) .carousel-bullet{
+#carousel-1:checked
+  ~ .control-1
+  ~ .carousel-indicators
+  li:nth-child(1)
+  .carousel-bullet,
+#carousel-2:checked
+  ~ .control-2
+  ~ .carousel-indicators
+  li:nth-child(2)
+  .carousel-bullet,
+#carousel-3:checked
+  ~ .control-3
+  ~ .carousel-indicators
+  li:nth-child(3)
+  .carousel-bullet,
+#carousel-4:checked
+  ~ .control-4
+  ~ .carousel-indicators
+  li:nth-child(4)
+  .carousel-bullet,
+#carousel-5:checked
+  ~ .control-5
+  ~ .carousel-indicators
+  li:nth-child(5)
+  .carousel-bullet {
   color: #428bca;
 }
 
@@ -597,45 +614,45 @@ height: 660px;
   text-align: center;
   font-size: 27px;
   color: rgba(255, 255, 255, 1);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   z-index: 9999;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33),
+    -1px 0px 2px rgba(255, 255, 255, 0);
 }
 
 /******************* HOME INTRODUCTION *******************/
 
-#home-title{
+#home-title {
   font-size: 50px;
   text-align: center;
   margin-bottom: 40px;
 }
 
-#home-introduction{
+#home-introduction {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-#home-introduction-img{
+#home-introduction-img {
   width: 400px;
   height: 292px;
 }
 
-#home-introduction p{
+#home-introduction p {
   width: 600px;
   padding: 20px;
 }
 
 /******************* HOME NOUVEAUTES *******************/
-#home-latestReleases{
+#home-latestReleases {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 70px 0px ;
-
+  margin: 70px 0px;
 }
 
-#home-latest-bookcard{
+#home-latest-bookcard {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -644,7 +661,8 @@ height: 660px;
   margin: 30px 0px;
 }
 
-#home-nouveautes-title, #home-categories-title {
+#home-nouveautes-title,
+#home-categories-title {
   font-size: 30px;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -652,24 +670,24 @@ height: 660px;
 
 /******************* HOME CATEGORIES *******************/
 
-#home-categories-name{
+#home-categories-name {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.home-card-cat{
+.home-card-cat {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 20px 0px;
   width: 272px;
   height: 272px;
-  background-color: #F2E9E4;
+  background-color: #f2e9e4;
 }
 
-a.home-catalog-card{
+a.home-catalog-card {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -681,20 +699,19 @@ a.home-catalog-card{
   text-decoration: none;
 }
 
-
 /******************* PROFILE *******************/
 
-#profile-h1-title{
+#profile-h1-title {
   margin: 60px auto;
 }
-#profile-infos{
+#profile-infos {
   margin-bottom: 100px;
 }
-.profile-title-categories{
+.profile-title-categories {
   font-weight: bold;
 }
 
-.profile-infos-container{
+.profile-infos-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -702,7 +719,7 @@ a.home-catalog-card{
   line-height: 40px;
 }
 
-#profile-tab-header{
+#profile-tab-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -710,12 +727,12 @@ a.home-catalog-card{
   margin-bottom: 20px;
 }
 
-#profile-tab-header h2{
+#profile-tab-header h2 {
   font-size: 50px;
 }
 
-#profile-add-book-button{
-  background-color: #4A4E69;
+#profile-add-book-button {
+  background-color: #4a4e69;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -725,11 +742,11 @@ a.home-catalog-card{
   border-radius: 6px;
 }
 
-#profile-add-book-button:hover{
+#profile-add-book-button:hover {
   background-color: #7c83ab;
 }
 
-#profile-add-book-button a{
+#profile-add-book-button a {
   color: white;
   text-decoration: none;
 }
@@ -742,80 +759,75 @@ table {
 
 th,
 td {
-    padding: 10px;
-    border: #ddd solid 1px;
+  padding: 10px;
+  border: #ddd solid 1px;
 }
 
-.profile-containerOptions, .profile-icons{
+.profile-containerOptions,
+.profile-icons {
   text-align: center;
 }
 
-
 /******************* ADD BOOK *******************/
 
-#add-nav{
+#add-nav {
   margin-top: 56px;
   margin-bottom: 40px;
 }
-#book-form{
+#book-form {
   margin-top: 80px;
-  
 }
 
-#book-form-container{
+#book-form-container {
   display: flex;
   justify-content: space-between;
 }
-.space{
+.space {
   display: flex;
   flex-direction: column;
   margin-bottom: 32px;
 }
 
-
-#book-form label{
+#book-form label {
   margin-bottom: 8px;
 }
 #book-form input,
 #book-form textarea,
-#book-form select
-{
-  border: 1px solid #4A4E69;
+#book-form select {
+  border: 1px solid #4a4e69;
   border-radius: 4px;
   width: 480px;
   font-size: 16px;
 }
 
-#book-form textarea{
+#book-form textarea {
   padding: 8px 16px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-#book-form input[type='file']{
+#book-form input[type="file"] {
   padding: 8px 16px;
-  
 }
 
-#book-form input[type=file]::file-selector-button{
-  background-color: #D9D9D9;
+#book-form input[type="file"]::file-selector-button {
+  background-color: #d9d9d9;
 }
 
-#img-cover{
+#img-cover {
   margin-bottom: 40px;
-  height:660px ;
+  height: 660px;
   width: 538px;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
-
 
 #form-right {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-#book-form input[type='submit']{
-  width:fit-content;
-  background-color: #4A4E69;
+#book-form input[type="submit"] {
+  width: fit-content;
+  background-color: #4a4e69;
   color: white;
   border: none;
   font-size: 16px;
@@ -824,8 +836,7 @@ td {
   padding: 8px 16px;
   height: 38px;
   font-size: 16px;
-  background-color: #C9ADA7;
+  background-color: #c9ada7;
   border: none;
   border-radius: 4px;
-  
 }
