--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,10 +29,17 @@ a:hover {
   text-decoration: underline;
 }
 
+p {
+  line-height: 1.4;
+}
+
 input,
 #book-form select {
   padding: 8px 16px;
-  height: 38px;
+  height: 48px;
+  border-radius: 4px;
+  border-width: 1px;
+  font-size: 16px;
 }
 
 input::placeholder,
@@ -42,7 +49,7 @@ textarea::placeholder {
 }
 
 .btn {
-  height: 38px;
+  height: 48px;
   padding: 8px 24px;
   font-size: 16px;
   color: white;
@@ -68,8 +75,8 @@ button:hover {
 /******************* NAV  *******************/
 #nav-bar {
   margin: 0 auto;
-  padding: 36px 0;
-  max-width: 1241px;
+  padding: 32px 0;
+  max-width: 1240px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -163,7 +170,7 @@ footer hr {
 
 /******************* CATALOG HEADER *******************/
 #catalog-hero {
-  min-height: 420px;
+  min-height: 380px;
   padding-bottom: 120px;
   background-color: #f2e9e4;
   display: flex;
@@ -181,7 +188,7 @@ footer hr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 80px;
+  gap: 40px;
 }
 
 #catalog-nav,
@@ -197,19 +204,21 @@ a.grey {
 #search {
   display: flex;
   flex-direction: row;
-  gap: 16px;
 }
 
 #search input {
   width: 480px;
+  border-radius: 4px 0 0 4px;
 }
 
 #search span {
-  font-size: 16px;
+  font-size: 24px;
 }
 
 #search .btn {
   padding: 10px 12px;
+  width: 48px;
+  border-radius: 0 4px 4px 0;
 }
 
 /******************* CATALOG MAIN  *******************/
@@ -225,9 +234,19 @@ a.grey {
   font-size: 40px;
 }
 
-#catalog-container ul {
+#catalog-container #filter {
   padding: 16px;
-  width: 240px;
+  min-width: 240px;
+  height: fit-content;
+  background-color: #f2e9e4;
+}
+
+#catalog-container #filter h3 {
+  margin-bottom: 16px;
+  font-size: 28px;
+}
+
+#catalog-container ul {
   font-size: 20px;
   background-color: #f2e9e4;
   list-style: none;
@@ -286,6 +305,7 @@ a.grey {
 
 /******************* BREADCRUMB *******************/
 .breadcrumb {
+  height: 32px;
   margin: 0 auto;
   padding-bottom: 44px;
   padding-top: 54px;
@@ -346,36 +366,43 @@ a.grey {
 }
 
 #book-details #infos {
-  padding-left: 74px;
+  margin-left: 80px;
   width: 615px;
 }
 
 #title-author #book-title {
-  font-size: 35px;
-  padding-bottom: 16px;
+  font-size: 40px;
+  margin-bottom: 32px;
 }
 
 #title-author .author {
-  font-size: 25px;
-  padding-bottom: 5px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#title-author .author a {
+  font-weight: 400;
 }
 
 #book-details #review {
-  padding-top: 16px;
+  margin-top: 24px;
 }
 
 #book-details #review p {
   font-size: 20px;
   font-weight: 600;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
+}
+
+#book-details #review p:last-child {
+  font-weight: 400;
 }
 
 #book-details #summary {
   font-size: 20px;
-  font-weight: 600;
   max-width: 568px;
-  padding-top: 13px;
-  padding-bottom: 61px;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 #infos-1 {
@@ -388,12 +415,12 @@ a.grey {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-right: 45px;
+  margin-right: 40px;
 }
 
 #infos-1 #catgories-details p,
 #infos-2 p {
-  padding-bottom: 11px;
+  margin-bottom: 8px;
   font-size: 20px;
 }
 
@@ -409,7 +436,7 @@ a.grey {
 #evaluation p {
   font-weight: 600;
   font-size: 18px;
-  padding-right: 40px;
+  margin-right: 40px;
 }
 
 #evaluation #stars-2 {
@@ -423,7 +450,6 @@ a.grey {
 }
 
 .stars .material-symbols-outlined {
-  padding-right: 8px;
   color: #ffad66;
   font-variation-settings: "FILL" 1;
 }
@@ -642,7 +668,6 @@ a.grey {
 #home-introduction p {
   padding: 0 20px 16px;
   width: 600px;
-  line-height: 1.4;
 }
 
 /******************* HOME NOUVEAUTES *******************/
@@ -769,7 +794,7 @@ td {
   text-align: center;
 }
 
-/******************* ADD BOOK *******************/
+/******************* ADD/MODIFY BOOK *******************/
 
 #add-nav {
   margin-top: 56px;
@@ -807,7 +832,7 @@ td {
 }
 
 #book-form input[type="file"] {
-  padding: 8px 16px;
+  padding: 12px 16px;
 }
 
 #book-form input[type="file"]::file-selector-button {
@@ -835,7 +860,7 @@ td {
 }
 #book-form button {
   padding: 8px 16px;
-  height: 38px;
+  height: 48px;
   font-size: 16px;
   background-color: #c9ada7;
   border: none;
