--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -116,6 +116,11 @@ button:hover {
   gap: 40px;
 }
 
+#logo{
+  width: 50px;
+  height: 50px;
+}
+
 /******************* FOOTER *******************/
 footer {
   height: 408px;
